--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <br> 
 <label for="country">Country </label>   
 <input list="con">
-<datalist id="con">
+<datalist id="con"><select name="" id=""></select>
 <option value="Bangladesh"></option>    
 <option value="Pakistin"></option> 
 <option value="India"></option> 
@@ -69,8 +69,9 @@ Gender:
 <br>
 <input type="submit"; value="Send">
 <input type="reset"; value="Reset">
+<br>
 
-
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, porro facilis. Ea quod labore repudiandae explicabo delectus, laboriosam itaque blanditiis unde velit! Quae, obcaecati eligendi. Sed at doloribus iure porro!</p>
 
 </from> 
 </body>
