--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Second Repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!--sing up from-->
@@ -70,11 +71,18 @@ Gender:
 <input type="submit"; value="Send">
 <input type="reset"; value="Reset">
 <br>
+</from>
 
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, porro facilis. Ea quod labore repudiandae explicabo delectus, laboriosam itaque blanditiis unde velit! Quae, obcaecati eligendi. Sed at doloribus iure porro!</p>
 <br>
 <marquee> Shamim Hossain </marquee>
+<br>
+<div class="box1">
+<div class="box2"></div>
+</div> <br>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, ducimus reiciendis sapiente iure quas atque magni rem officia illo maiores!</p>
+<div class="shamim">
+Shamim Hossain
+</div>
 
-</from> 
 </body>
 </html>
