--- a/index.html
+++ b/index.html
@@ -79,9 +79,16 @@ Gender:
 <div class="box1">
 <div class="box2"></div>
 </div> <br>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, ducimus reiciendis sapiente iure quas atque magni rem officia illo maiores!</p>
+
 <div class="shamim">
 Shamim Hossain
+</div>
+
+<div class="box-container">
+    <div class="box3"></div>
+    <div class="box4"></div>
+    <div class="box5"></div>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, quidem saepe dignissimos deserunt ea voluptas laboriosam unde voluptatum quas quod?</p>
 </div>
 
 </body>
