added box comment

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@ Gender:
 Shamim Hossain
 </div>
 
+<!-- Box -->
 <div class="box-container">
     <div class="box3"></div>
     <div class="box4"></div>
