--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
     <!--sing up from-->
      <from action="#" method="post">
-<h1 style="text-align: center;">Sing Up Form</h1> <hr>
+        <div class="header">
+
+            <h1 style="text-align: center;">Sing Up Form</h1> <hr>
+        </div>
 <br>
 <label for="user"> Name: </label>
 <input type="text" id="user" name="user" placeholder="User Name"> <br>
