--- a/index.html
+++ b/index.html
@@ -94,7 +94,24 @@ Shamim Hossain
     <div class="box3"></div>
     <div class="box4"></div>
     <div class="box5"></div>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, quidem saepe dignissimos deserunt ea voluptas laboriosam unde voluptatum quas quod?</p>
+
+</div>
+<!--Pseudo class--> 
+
+<h3>Lorem ipsum dolor sit amet.</h3>
+<h3>Lorem ipsum dolor sit amet.</h3>
+<h3>Lorem ipsum dolor sit amet.</h3>
+<h3>Lorem ipsum dolor sit amet.</h3>
+
+<!--Pseudo Element-->
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores quia quas molestiae tempora ea dolorum consectetur nemo dignissimos aut reprehenderit.</p>
+<!--opacity-->
+<img src="love_2.jpg" alt="shamim">
+
+<div class="bg">
+<div class="box"> 
+    <h2>Shamim</h2>
+</div>
 </div>
 
 </body>
