--- a/index.html
+++ b/index.html
@@ -112,8 +112,22 @@ Shamim Hossain
 <div class="bg">
 <div class="box"> 
     <h2>Shamim</h2>
+</div> 
+</div>
+
+<div class="social">
+
+</div>
+<div class="transform">
+<h4> CSS transform</h4>
+<div class="box7">
+<h5> Shamim Hossain</h5>
+
 </div>
 </div>
+
+
+
 
 </body>
 </html>
