--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Second Repo</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/d6ca853c51.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <from action="#" method="post">
-      <h1 style="text-align: center">Sing Up Form</h1>
-      <!--Header % Navbar -->
+      <h1 class="head" style="text-align: center">Sing Up Form</h1>
+      <!--Header start -->
       <header>
         <div class="navbar">
           <ul>
@@ -28,6 +29,7 @@
           </ul>
         </div>
       </header>
+      <!--Header end-->
 
       <br />
       <!--sing up from-->
@@ -158,5 +160,29 @@
         <h5>Shamim Hossain</h5>
       </div>
     </div>
+    <!--Footer start-->
+    <footer>
+      <div>
+        <h1 class="footer">Sing Up Form</h1>
+      </div>
+      <div>
+        <h6>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
+          reiciendis incidunt necessitatibus alias impedit doloremque quos
+          dignissimos perspiciatis officiis dolorum? Accusamus vero ipsa nulla
+          necessitatibus tempore quia rerum eveniet eos.
+        </h6>
+      </div>
+      <div class="icon">
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-linkedin"></i>
+        <i class="fa-brands fa-youtube"></i>
+      </div>
+      <div class="copy">
+        Copyright @2023 by Shamim Hossain 
+      </div>
+    </footer>
+    <!--Footer End-->
   </body>
 </html>
